posts and things

--- a/_posts/2020-02-11-themes.md
+++ b/_posts/2020-02-11-themes.md
@@ -1,5 +1,49 @@
 ---
 layout: post
-title: themes
+title: Themes
 date: 2020-02-11 15:50 -0700
 ---
+# The theme you see now is the default Jekyll theme, Minima.
+More free themes can be found [here](https://jekyllrb.com/docs/themes/).
+
+When you're choosing a theme, make sure to choose one that gets regularly updated and has enough documentation to help you in case things go wonky.
+
+# There are two ways to bring an online theme into your Jekyll sites, the quick start, and by installing a theme as a gem.
+#### The Quick Start:
+Fork the theme repository from GitHub (by pressing the Fork button)
+
+**Inside your terminal:**
+
+`git clone URLofFork`
+
+This method is sometimes glitchy, but it can be useful if you want to see demos or don't have much time. This method creates a new site to begin working with and does not require a `Jekyll new` process.
+
+#### Installing a theme as a gem:
+
+This option changes the site you've already created with `Jekyll new` into the theme you prefer. There are more steps but it's more stable.
+
+**In your terminal:**
+
+`Install jekyll-theme-athena` or some other theme
+
+**In your config.yml file inside your Jekyll site:**
+
+Change the URL and BaseURL to empty `""`
+
+*Note:* Sometimes, you'll have to find and replace your current config.yml file with the config.yml file inside the gem you installed when you ran the `install jekyll-theme-athena` command. You can find the file from the terminal: `"jekyll-theme-athena" --path`. Or, you can browse your Ruby gem files.
+
+**In your gemfile inside your Jekyll site:**
+
+Swap `theme: jekyll-theme-athena` for the correct theme name
+
+While you're in your gem file, install these this plugin: `‘jekyll-compose’, group: [:jekyll_plugins]` so you'll be able to post easily from the command line.
+
+`bundle exec jekyll post "postTitle"` is the command to post.
+
+**Inside the terminal**
+
+`bundle` to bundle all the new plugins and configurations
+
+`bundle exec jekyll serve` to see your changes!
+
+**If you want to edit the theme you've chosen you'll need to know a little HTML and CSS, and you'll need to read [this](https://jekyllrb.com/docs/themes/#overriding-theme-defaults) to figure out how exactly to edit a Jekyll theme.**
