--- a/_posts/2020-02-11-themes.md
+++ b/_posts/2020-02-11-themes.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Themes
+title: Installing a Theme in your Jekyll Site
 date: 2020-02-11 15:50 -0700
 ---
 # The theme you see now is the default Jekyll theme, Minima.
@@ -47,3 +47,5 @@ While you're in your gem file, install these this plugin: `‘jekyll-compose’,
 `bundle exec jekyll serve` to see your changes!
 
 **If you want to edit the theme you've chosen you'll need to know a little HTML and CSS, and you'll need to read [this](https://jekyllrb.com/docs/themes/#overriding-theme-defaults) to figure out how exactly to edit a Jekyll theme.**
+
+[Back to home]({% link index.markdown %})
