--- a/_posts/2020-02-11-themes.md
+++ b/_posts/2020-02-11-themes.md
@@ -3,42 +3,58 @@ layout: post
 title: Installing a Theme in your Jekyll Site
 date: 2020-02-11 15:50 -0700
 ---
-# The theme you see now is the default Jekyll theme, Minima.
+>The theme you see now is the default Jekyll theme, Minima.
 More free themes can be found [here](https://jekyllrb.com/docs/themes/).
-
 When you're choosing a theme, make sure to choose one that gets regularly updated and has enough documentation to help you in case things go wonky.
 
-# There are two ways to bring an online theme into your Jekyll sites, the quick start, and by installing a theme as a gem.
-#### The Quick Start:
-Fork the theme repository from GitHub (by pressing the Fork button)
+# There are a few ways to bring an online theme into your Jekyll site: we'll explore cloning locally, and then installing a theme as a gem.
+
+#### Cloning locally:
+Clone the theme repository from GitHub by pressing the clone button and copying the URL there.
 
 **Inside your terminal:**
 
-`git clone URLofFork`
+`cd` to the directory you'd like to clone the file eg): `cd desktop`
 
-This method is sometimes glitchy, but it can be useful if you want to see demos or don't have much time. This method creates a new site to begin working with and does not require a `Jekyll new` process.
+`git clone URLofThemeClone` this will make a file where you've specified
+
+`cd fileName` replace fileName with whatever the cloned file was named
+
+`bundle install` to install the necessary Jekyll and other gems for the theme clone
+
+`bundle exec jekyll serve` to see your site!
+
+`atom .` to see and edit your site files
+
+Open your browser to http://localhost:4000
+
+*Note that this method creates a new site base to begin working with and does not require a `Jekyll new` process.*
+
+_________________
 
 #### Installing a theme as a gem:
 
-This option changes the site you've already created with `Jekyll new` into the theme you prefer. There are more steps but it's more stable.
+This option changes the site you've already created with `Jekyll new` into the theme you prefer. There are more steps and often more troubleshooting but it may be more stable. [Click here]({% link _posts/2020-02-11-how-to-jekyll.md %}) to find out more about using the command `jekyll new`.
 
 **In your terminal:**
 
-`Install jekyll-theme-athena` or some other theme
+While inside your new Jekyll site folder `Install jekyll-theme-athena` or some other theme
+
+`bundle install` to ensure all gems are present and up-to-date
+
+`atom .` to see and edit your site files
 
 **In your config.yml file inside your Jekyll site:**
 
 Change the URL and BaseURL to empty `""`
 
-*Note:* Sometimes, you'll have to find and replace your current config.yml file with the config.yml file inside the gem you installed when you ran the `install jekyll-theme-athena` command. You can find the file from the terminal: `"jekyll-theme-athena" --path`. Or, you can browse your Ruby gem files.
+Swap `theme: minima` with the correct theme name eg): `theme: athena`
+
+*Note:* Sometimes, you'll have to find and replace your current config.yml file with the config.yml file inside the gem you installed when you ran the `install jekyll-theme-athena` command. This means you'll have to find the gem file in your Ruby gem files.
 
 **In your gemfile inside your Jekyll site:**
 
-Swap `theme: jekyll-theme-athena` for the correct theme name
-
-While you're in your gem file, install these this plugin: `‘jekyll-compose’, group: [:jekyll_plugins]` so you'll be able to post easily from the command line.
-
-`bundle exec jekyll post "postTitle"` is the command to post.
+Comment out `gem "minima", "~> 2.5"` -> `# gem "minima", "~> 2.5"` and write a gem with the correct theme name eg): `gem "athena"`
 
 **Inside the terminal**
 
@@ -46,6 +62,14 @@ While you're in your gem file, install these this plugin: `‘jekyll-compose’,
 
 `bundle exec jekyll serve` to see your changes!
 
-**If you want to edit the theme you've chosen you'll need to know a little HTML and CSS, and you'll need to read [this](https://jekyllrb.com/docs/themes/#overriding-theme-defaults) to figure out how exactly to edit a Jekyll theme.**
+_____________________
+
+#### Whichever theme installation you choose, if you'd like to make ready-made posts from the terminal/command line:
+
+In your gemfile, install these this plugin: `‘jekyll-compose’, group: [:jekyll_plugins]` so you'll be able to post easily from the command line.
+
+`bundle exec jekyll post "postTitle"` is the command to post.
+
+*Note that if you want to edit the theme you've chosen you'll need to know a little HTML and CSS, and you'll need to read [this](https://jekyllrb.com/docs/themes/#overriding-theme-defaults) to figure out how exactly to edit a Jekyll theme.*
 
 [Back to home]({% link index.markdown %})
