--- a/_posts/2020-02-11-themes.md
+++ b/_posts/2020-02-11-themes.md
@@ -66,7 +66,7 @@ _____________________
 
 #### Whichever theme installation you choose, if you'd like to make ready-made posts from the terminal/command line:
 
-In your gemfile, install these this plugin: `‘jekyll-compose’, group: [:jekyll_plugins]` so you'll be able to post easily from the command line.
+In your gemfile, install this plugin: `‘jekyll-compose’, group: [:jekyll_plugins]` so you'll be able to post easily from the command line.
 
 `bundle exec jekyll post "postTitle"` is the command to post.
 
