more post edits

--- a/_posts/2020-02-11-themes.md
+++ b/_posts/2020-02-11-themes.md
@@ -1,24 +1,28 @@
 ---
 layout: post
-title: Installing a Theme in your Jekyll Site
+title: Installing a theme in your Jekyll site
 date: 2020-02-11 15:50 -0700
 ---
 >The theme you see now is the default Jekyll theme, Minima.
-More free themes can be found [here](https://jekyllrb.com/docs/themes/).
+More free themes can be found here: [https://jekyllrb.com/docs/themes/](https://jekyllrb.com/docs/themes/)
 When you're choosing a theme, make sure to choose one that gets regularly updated and has enough documentation to help you in case things go wonky.
 
 # There are a few ways to bring an online theme into your Jekyll site: we'll explore cloning locally, and then installing a theme as a gem.
 
 #### Cloning locally:
-Clone the theme repository from GitHub by pressing the clone button and copying the URL there.
+Clone any theme repository from GitHub by pressing the clone button (right side of the repository) and copying the URL there. Each free theme you find in the above link will have a git repository associated with it.
+
+[Click here](https://github.com/paigestewart/jekyllyourlife.site) for an example repository to clone. This is the repository for the jekyllyourlife.site website. Don't worry, you won't change anything on the actual site - it's just for you to play with.
+
+*Note that this method creates a new site base to begin working with and does not require a `Jekyll new` process.*
 
 **Inside your terminal:**
 
-`cd` to the directory you'd like to clone the file eg): `cd desktop`
+`cd` to the directory you'd like to clone the file into - eg): `cd desktop`
 
-`git clone URLofThemeClone` this will make a file where you've specified
+`git clone CopyPastedURLofThemeClone` this will make a file where you've specified
 
-`cd fileName` replace fileName with whatever the cloned file was named
+`cd fileName` replace fileName with whatever the cloned file was named (if you cloned the theme to your desktop there will now be a new folder on your desktop displaying the name you need to `cd` into)
 
 `bundle install` to install the necessary Jekyll and other gems for the theme clone
 
@@ -34,11 +38,11 @@ _________________
 
 #### Installing a theme as a gem:
 
-This option changes the site you've already created with `Jekyll new` into the theme you prefer. There are more steps and often more troubleshooting but it may be more stable. [Click here]({% link _posts/2020-02-11-how-to-jekyll.md %}) to find out more about using the command `jekyll new`.
+This option changes the basic site you've already created with `Jekyll new` into the theme you prefer. There are more steps and often more troubleshooting but it may be more stable. [Click here]({% link _posts/2020-02-11-how-to-jekyll.md %}) to find out more about using the command `jekyll new`.
 
 **In your terminal:**
 
-While inside your new Jekyll site folder `Install jekyll-theme-athena` or some other theme
+While inside your new Jekyll site folder in the command line/terminal, run `gem install jekyll-athena` or some other theme (find more theme gems by searching "jekyll theme" [here](https://rubygems.org/)), or by looking through themes from the link at the top of this page.
 
 `bundle install` to ensure all gems are present and up-to-date
 
@@ -48,13 +52,13 @@ While inside your new Jekyll site folder `Install jekyll-theme-athena` or some o
 
 Change the URL and BaseURL to empty `""`
 
-Swap `theme: minima` with the correct theme name eg): `theme: athena`
+Swap `theme: minima` with the correct theme name eg): `theme: jekyll-athena`
 
 *Note:* Sometimes, you'll have to find and replace your current config.yml file with the config.yml file inside the gem you installed when you ran the `install jekyll-theme-athena` command. This means you'll have to find the gem file in your Ruby gem files.
 
 **In your gemfile inside your Jekyll site:**
 
-Comment out `gem "minima", "~> 2.5"` -> `# gem "minima", "~> 2.5"` and write a gem with the correct theme name eg): `gem "athena"`
+Comment out `gem "minima", "~> 2.5"` -> `# gem "minima", "~> 2.5"` and write a gem with the correct theme name eg): `gem 'athena', '~> 0.2.6'`
 
 **Inside the terminal**
 
